refactor!(targetting): allow towers to efficiently chow down on enemies